# claude-auto-reflect

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
auto_reflect/: analyze_session.py  config.py  dashboard-template.html  dashboard_server.py  deep_analyze.py  detect_patterns.py  eval_gate.py  generate_dashboard.py  orchestrate.py  proposals.py  propose_improvements.py  show_proposals.py
commands/: auto-reflect.md
cron/: batch-catchup.sh
examples/: sample-observation.json  settings-full.json  settings-hook-only.json
hooks/: auto-reflect.sh  reflect-status.sh
tests/: test_analyze.py  test_detect.py
tests/fixtures/: sample-session.jsonl
