[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-auto-reflect"
version = "0.1.0"
description = "Self-improvement feedback loop for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
# Zero external dependencies — stdlib only

[tool.setuptools.packages.find]
include = ["auto_reflect*"]

[tool.setuptools.package-data]
auto_reflect = ["dashboard-template.html"]

[project.scripts]
auto-reflect = "auto_reflect.orchestrate:main"
auto-reflect-analyze = "auto_reflect.analyze_session:main"
auto-reflect-proposals = "auto_reflect.proposals:main"
auto-reflect-eval-gate = "auto_reflect.eval_gate:main"
